PyMaker/datas/object2/RawHTML/i201/Python_DOC_referPages.generate-random-math-in-python-3.txt
<div class="post-text" itemprop="text">
<p>This program will ask the user a series of questions about two numbers. These two numbers will be generated randomly between 1 and 10 and it will ask the user 10 times. At the end of these 10 questions the program will display how many the user got correct out of those questions.
Each question should randomly decide between asking for the product, sum, or difference. Separate the question asking into a function, as well as the validating user input.</p>
<p>I tried using with three product, sum or difference in random to generate. I tried to use <code>z = random.randint(1, 4)</code> is to select from 1 is product, 2 is sum, or 3 is difference and then I used with if variable <code>z</code> is 1, then do product math or if var <code>z</code> is 3, then it should be difference like this <code>x / y</code>, but I couldn't figure it finish it up. I have the expected result when I first run with product but it works so I just need to add with sum and difference included. </p>
<p><strong>EXPECTED OUTPUT</strong> with product (<em>Some are incorrect for testing with scores</em>): </p>
<pre><code>&gt; python3 rand3.py
What is 3 x 4
Enter a number: 12
What is 3 x 7
Enter a number: 27
What is 6 x 3
Enter a number: 18
What is 7 x 10
Enter a number: 70
What is 9 x 10
Enter a number: 90
What is 9 x 7
Enter a number: 72
What is 5 x 9
Enter a number: 54
What is 6 x 8
Enter a number:
Incorrect Input!
Enter a number: 48
What is 1 x 5
Enter a number: 5
What is 10 x 3
Enter a number: 30
You got 7 correct out of 10
</code></pre>
<p>My Work for Product Only (<strong><em>Success</em></strong>):</p>
<pre><code>import random

def askNum():
  while(1):
    try:
      userInput = int(input("Enter a number: "))
      break
    except ValueError:
      print("Incorrect Input!")

  return userInput

def askQuestion():

  x = random.randint(1, 100)
  y = random.randint(1, 100)

  print("What is " + str(x) + " x " +str(y))

  u = askNum()

  if (u == x * y):
    return 1
  else:
    return 0

amount = 10
correct = 0
for i in range(amount):
  correct += askQuestion()

print("You got %d correct out of %d" % (correct, amount))
</code></pre>
<p><strong>My Currently Work: (I am working to add sum and difference like the expected output</strong> </p>
<p><em>UPDATED</em>: After the expected output works well with product so I am trying to add new random int for <code>z</code> with 1-3 which means I am using with 1 is for product, 2 is for sum and 3 is difference by using if-statement by given random select. I am struggle at this is where I stopped and figure it out how to do math random because I am new to Python over a month now. </p>
<pre><code>import random

def askNum():
  while(1):
    try:
      userInput = int(input("Enter a number: "))
      break
    except ValueError:
      print("Incorrect Input!")

  return userInput

def askQuestion():

  x = random.randint(1, 10)
  y = random.randint(1, 10)
  z = random.randint(1, 4)

  print("What is " + str(x) + "  "+ str(z)+ " " +str(y))

  u = askNum()

    if (z == 1):
      x * y  #product
      return 1
    else if (z == 2):
      x + y #sum
      return 1
    else if (z == 3):
      x / y #difference
      return 1
    else
      return 0

amount = 10
correct = 0
for i in range(amount):
  correct += askQuestion()

print("You got %d correct out of %d" % (correct, amount))
</code></pre>
<p><strong>OUTPUT</strong>:</p>
<pre><code>md35@isu:/u1/work/python/mathquiz&gt; python3 mathquiz.py
  File "mathquiz.py", line 27
    if (z == 1):
    ^
IndentationError: unexpected indent
md35@isu:/u1/work/python/mathquiz&gt;
</code></pre>
<p>With this currently output, I double checked with corrected Python formatting and everything are sensitive, and still the same as running output. Any help would be more appreciated with explanation. (I hope my English is okay to understand since i'm deaf) I have started this since on Saturday, than expected on time to meet. </p>
</div>
<div class="post-text" itemprop="text">
<p>Your problem is that python 3 does not allow mixing spaces and tabs for indentation. Use an editor that displays the whitespace used (and fix manually) or one that replaces tabs into spaces. It is suggested to use 4 spaces for indentation - read <a href="https://www.python.org/dev/peps/pep-0008/" rel="nofollow noreferrer">PEP-0008</a> for more styling tips.</p>
<hr/>
<p>You can make your program less cryptic if you use <code>'+','-','*','/'</code> instead of <code>1,2,3,4</code> to map your operation: <a href="https://docs.python.org/3/library/random.html#random.choice" rel="nofollow noreferrer"><code>ops = random.choice("+-*/")</code></a> gives you one of your operators as string. You feed it into a <code>calc(a,ops,b)</code> function and return the correct result from it.</p>
<p>You can also shorten your <code>askNum</code> and provide the text to print. </p>
<p>These could look like so:</p>
<pre><code>def askNum(text):
    """Retunrs an integer from input using 'text'. Loops until valid input given."""
    while True:
        try:
            return int(input(text))
        except ValueError:
            print("Incorrect Input!")

def calc(a,ops,b):
    """Returns integer operation result from using : 'a','ops','b'"""
    if   ops == "+": return a+b
    elif ops == "-": return a-b
    elif ops == "*": return a*b
    elif ops == "/": return a//b   # integer division
    else: raise ValueError("Unsupported math operation")
</code></pre>
<p>Last but not least you need to fix the division part - you allow only integer inputs so you can also only give division problems that are solveable using an integer answer.</p>
<p>Program:</p>
<pre><code>import random

total = 10
correct = 0
nums = range(1,11)
for _ in range(total):
    ops = random.choice("+-*/")
    a,b = random.choices(nums,k=2)

    # you only allow integer input - your division therefore is
    # limited to results that are integers - make sure that this
    # is the case here by rerolling a,b until they match
    while ops == "/" and (a%b != 0 or a&lt;=b):
        a,b = random.choices(nums,k=2)

    # make sure not to go below 0 for -
    while ops == "-" and a&lt;b:
        a,b = random.choices(nums,k=2)

    # as a formatted text 
    result = askNum("What is {} {} {} = ".format(a,ops,b))

    # calculate correct result
    corr = calc(a,ops,b)
    if  result == corr:
        correct += 1
        print("Correct")
    else:
        print("Wrong. Correct solution is: {} {} {} = {}".format(a,ops,b,corr))

print("You have {} out of {} correct.".format(correct,total))
</code></pre>
<p>Output:</p>
<pre><code>What is 8 / 1 = 3
Wrong. Correct solution is: 8 / 1 = 8
What is 5 - 3 = 3
Wrong. Correct solution is: 5 - 3 = 2
What is 4 - 2 = 3
Wrong. Correct solution is: 4 - 2 = 2
What is 3 * 1 = 3
Correct
What is 8 - 5 = 3
Correct
What is 4 / 1 = 3
Wrong. Correct solution is: 4 / 1 = 4
What is 8 * 7 = 3
Wrong. Correct solution is: 8 * 7 = 56
What is 9 + 3 = 3
Wrong. Correct solution is: 9 + 3 = 12
What is 8 - 1 = 3
Wrong. Correct solution is: 8 - 1 = 7
What is 10 / 5 = 3
Wrong. Correct solution is: 10 / 5 = 2
You have 2 out of 10 correct.
</code></pre>
</div>
<div class="post-text" itemprop="text">
<pre><code>def askQuestion():
  x = random.randint(1, 10)
  y = random.randint(1, 10)
  z = random.randint(1, 4)
  print("What is " + str(x) + "  "+ str(z)+ " " +str(y))
  u = askNum()
  if (z == 1):
    x * y  #product
    return 1
  elif (z == 2):
    x + y #sum
    return 1
  elif (z == 3):
    x / y #difference
    return 1
  else:
    return 0
</code></pre>
<p>Write your block like this your u = askNum() and next if loop should be on same vertical line.</p>
</div>
<div class="post-text" itemprop="text">
<p>To Generate n number of random number you can use </p>
<pre><code>random.sample(range(from, to),how_many_numbers)
</code></pre>
<p>User <a href="https://stackoverflow.com/questions/22842289/generate-n-unique-random-numbers-within-a-range">this</a> as reference for more info on random</p>
<pre><code>import random

low=0
high=4
n=2 #no of random numbers


rand = random.sample(range(low, high), n)

#List of Operators
arithmetic_operators = ["+", "-", "/", "*"];
operator = random.randint(0, 3)

x = rand[0];
y = rand[1];
result=0;
# print(x, operator, y)

if (operator == 0):
    result = x + y# sum

elif(operator == 1):
    result = x - y# difference

elif(operator == 2):
   result= x / y#division

else :
    result=x * y# product


print("What is {} {} {}? = ".format(x,arithmetic_operators[operator],y))
</code></pre>
<p>The following stores a random number(int)</p>
<pre><code>operator = random.randint(0, 3)
</code></pre>
<p>to compare it with the list for operators.</p>
<hr/>
<p>Example: operator = 2</p>
<pre><code>elif(operator == 2):
   result= x / y#division
</code></pre>
<p>than this code will executed and because operator=2, 3rd element from list(/) will be selected </p>
<p>Output:</p>
<pre><code>What is 3  / 2?
</code></pre>
</div>
<span class="comment-copy">Try to replace <code>else if</code> with <code>elif</code>. Does it work now?</span>
<span class="comment-copy">after u=askNum() you indented your if block wrong</span>
<span class="comment-copy">Okay @Lomtrur, I have replaced all <code>else if</code> to <code>elif</code> but it's still the same output, nothing changed?</span>
<span class="comment-copy">@mamun, I'm confused but for <code>u=askNum()</code> is input from user to answer...</span>
<span class="comment-copy"><code>else if</code> is invalid syntax. There is no colon after the <code>else</code> (second line from bottom).</span>
<span class="comment-copy">yah i was more focus on given issue which is IndentationError. Thank you for correcting.</span>
<span class="comment-copy">Sorry for the bad explanation</span>
